# Meta-Huggingface-Hackthon

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
app/: env.py  main.py  models.py
app/data_gen/: generate_datasets.py
app/graders/: grader1.py  grader2.py  grader3.py
server/: app.py
