[project]
name = "sciclean-env"
version = "1.0.0"
description = "RL environment for scientific data cleaning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "httpx>=0.27",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Suru3458A/MetaXScalar"